added more feature extraction methods, changed the train and predict files

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ numpy==1.18.5
 py-ecg-detectors==1.0.2
 pandas==1.1.0
 mysql-connector-python==8.0.26
+
+scikit-learn==1.0.2
+
+hrv-analysis == 1.0.4
+
