--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
-scipy==1.4.1
+astropy==5.0.4
+certifi==2022.5.18.1
+cycler==0.11.0
+future==0.18.2
+gatspy==0.3
+hrv-analysis==1.0.4
+joblib==1.1.0
+kiwisolver==1.4.2
 matplotlib==3.3.0
-numpy==1.18.5
-py-ecg-detectors==1.0.2
-pandas==1.1.0
 mysql-connector-python==8.0.26
-
+nolds==0.5.2
+numpy==1.18.5
+packaging==21.3
+pandas==1.1.0
+Pillow==9.1.1
+protobuf==3.20.1
+py-ecg-detectors==1.0.2
+pyerfa==2.0.0.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.1
+PyWavelets==1.3.0
+PyYAML==6.0
 scikit-learn==1.0.2
-
-hrv-analysis == 1.0.4
-
+scipy==1.4.1
+six==1.16.0
+threadpoolctl==3.1.0
+wincertstore==0.2
