--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,104 @@
+absl-py==1.1.0
+alabaster==0.7.12
 astropy==5.0.4
+asttokens==2.0.5
+astunparse==1.6.3
+Babel==2.10.1
+backcall==0.2.0
+cachetools==5.2.0
 certifi==2022.5.18.1
+charset-normalizer==2.0.12
+clang==5.0
+colorama==0.4.4
 cycler==0.11.0
+decorator==5.1.1
+docutils==0.18.1
+executing==0.8.3
+flatbuffers==1.12
 future==0.18.2
+gast==0.4.0
 gatspy==0.3
+google-auth==2.7.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.46.3
+gspread==5.4.0
+h5py==3.1.0
 hrv-analysis==1.0.4
+httplib2==0.20.4
+idna==3.3
+imagesize==1.3.0
+imbalanced-learn==0.9.1
+imblearn==0.0
+importlib-metadata==4.11.4
+ipython==8.4.0
+jedi==0.18.1
+Jinja2==3.1.2
 joblib==1.1.0
+keras==2.9.0
+Keras-Preprocessing==1.1.2
 kiwisolver==1.4.2
+libclang==14.0.1
+Markdown==3.3.7
+MarkupSafe==2.1.1
 matplotlib==3.3.0
+matplotlib-inline==0.1.3
 mysql-connector-python==8.0.26
 nolds==0.5.2
-numpy==1.18.5
+numpy==1.22.4
+oauth2client==4.1.3
+oauthlib==3.2.0
+opt-einsum==3.3.0
 packaging==21.3
 pandas==1.1.0
+parso==0.8.3
+pickleshare==0.7.5
 Pillow==9.1.1
 pip==21.2.2
-protobuf==3.20.1
+prompt-toolkit==3.0.29
+protobuf==3.19.4
+pure-eval==0.2.2
 py-ecg-detectors==1.0.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pyerfa==2.0.0.1
+Pygments==2.12.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.1
 PyWavelets==1.3.0
 PyYAML==6.0
-scikit-learn==1.0.2
-scipy==1.4.1
-six==1.16.0
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
+scikit-learn==1.1.1
+scipy==1.8.1
+six==1.15.0
+snowballstemmer==2.2.0
+Sphinx==5.0.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+stack-data==0.2.0
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.9.0
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.26.0
+termcolor==1.1.0
 threadpoolctl==3.1.0
+traitlets==5.2.2.post1
+tsfel==0.1.4
+typing-extensions==3.7.4.3
+urllib3==1.26.9
+wcwidth==0.2.5
+Werkzeug==2.1.2
 wheel==0.37.1
 wincertstore==0.2
+wrapt==1.12.1
+xgboost==1.6.1
+zipp==3.8.0
