--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ decorator==5.1.1
 docutils==0.18.1
 executing==0.8.3
 flatbuffers==1.12
+fonttools==4.33.3
 future==0.18.2
 gast==0.4.0
 gatspy==0.3
@@ -73,6 +74,7 @@ requests-oauthlib==1.3.1
 rsa==4.8
 scikit-learn==1.1.1
 scipy==1.8.1
+setuptools==61.2.0
 six==1.15.0
 snowballstemmer==2.2.0
 Sphinx==5.0.1
