--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ asttokens==2.0.5
 astunparse==1.6.3
 Babel==2.10.1
 backcall==0.2.0
+bidict=0.22.0
+biosppy=0.8.0
 cachetools==5.2.0
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
@@ -15,7 +17,6 @@ decorator==5.1.1
 docutils==0.18.1
 executing==0.8.3
 flatbuffers==1.12
-fonttools==4.33.3
 future==0.18.2
 gast==0.4.0
 gatspy==0.3
@@ -45,6 +46,7 @@ MarkupSafe==2.1.1
 matplotlib==3.3.0
 matplotlib-inline==0.1.3
 mysql-connector-python==8.0.26
+neurokit2==0.2.0
 nolds==0.5.2
 numpy==1.22.4
 oauth2client==4.1.3
@@ -75,6 +77,7 @@ rsa==4.8
 scikit-learn==1.1.1
 scipy==1.8.1
 setuptools==61.2.0
+shortuuid==1.0.9
 six==1.15.0
 snowballstemmer==2.2.0
 Sphinx==5.0.1
